[metadata]
name = gutils
version = file:VERSION
description = Python Utility Libraries for "GShop" web-engine
author = Andrew G
url = https://github.com/gandriyko/gutils
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Environment :: Web Environment
    Intended Audience :: Developers
    Framework :: Django
    License :: OSI Approved :: MIT License
license = MIT

[options]
include_package_data = True

install_requires =
    Django>=3.2
    importlib-metadata; python_version<"3.8"
packages = gutils

[options.packages.find]
where = gutils
